docker-demo1/mysql-server-pod.yaml
apiVersion: v1
kind: Pod
metadata: 
  name: mysql-server
  labels:
    app: mysql-server
spec:
  containers:
  - name: mysql-server
    image: mysql:5.7
    ports: 
    - name: mysql-port
      containerPort: 3306
