docker-demo1/wordpress-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: wordpress-service
spec:
  ports:
  - port: 3000
    protocol: TCP
    targetPort: wordpress-port
  selector:
    app: wordpress
  type: NodePort
