docker-demo1/ingress-example-1.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: example-1
spec:
  rules:
  - http:
      paths:
      - path: /test
        pathType: Prefix  # 添加 pathType，这是必需的字段
        backend:
          service:
            name: test  # 之前的 serviceName 现在变为 name
            port:
              number: 80  # 之前的 servicePort 现在变为 number
