docker-demo1/ingress-example-2.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: example-2
spec:
  rules:
  - host: helloworld-v1.example.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: hellworld-v1
            port:
              number: 80
  - host: helloworld-v2.example.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: helloworld-v2
            port:
              number: 80
